--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -24,7 +24,7 @@ set(example_files example.cpp)
 # include
 include_directories(${MUJIN_INSTALL_INCLUDE_DIR} ${MUJIN_INSTALL_INCLUDE_DIR}/eigen3)
 message(STATUS "MUJIN_INSTALL_INCLUDE_DIR=${MUJIN_INSTALL_INCLUDE_DIR}")
-set(USE_PYTHON3 no CACHE BOOL "switch between python and python3")
+set(USE_PYTHON3 ON CACHE BOOL "switch between python and python3")
 if(NOT APPLE)
 	if(USE_PYTHON3)
 	  include_directories(${MUJIN_INSTALL_INCLUDE_DIR}/python3.6m)
@@ -32,11 +32,15 @@ if(NOT APPLE)
 	  include_directories(/usr/include/python2.7)
 	endif()
 else()
-	set(USE_PYTHON3 yes)
-	set(PYTHON_DIR "/usr/local/Cellar/python/3.7.3/Frameworks/Python.framework/Versions/3.7")
-	include_directories("${PYTHON_DIR}/include/python3.7m")
-	link_directories("${PYTHON_DIR}/lib")
-	# 
+	if(USE_PYTHON3)
+	  set(PYTHON_DIR "/Library/Frameworks/Python.framework/Versions/3.7")
+	  include_directories("${PYTHON_DIR}/include/python3.7m")
+	  link_directories("${PYTHON_DIR}/lib")
+	else()
+	  set(PYTHON_DIR "/Library/Frameworks/Python.framework/Versions/2.7")
+	  include_directories("${PYTHON_DIR}/include/python2.7")
+	  link_directories("${PYTHON_DIR}/lib")
+    endif()
 endif()
 link_directories(${BOOST_LIBRARYDIR})	
 
@@ -44,11 +48,16 @@ link_directories(${BOOST_LIBRARYDIR})
 add_library(example SHARED ${example_files})
 
 if(APPLE)
-	target_link_libraries(example python3.7)
+	if(USE_PYTHON3)
+	  target_link_libraries(example python3.7)
+	else()
+	  target_link_libraries(example python2.7)
+    endif()
 endif()
 
 # prefix of library (no "lib")
-# python3-config --extension-suffix
+# `python3-config --extension-suffix`
+# `python-config --extension-suffix`
 if(USE_PYTHON3)
   if(APPLE)
   	set_target_properties(example PROPERTIES PREFIX "" SUFFIX ".cpython-37m-darwin.so")
@@ -56,6 +65,10 @@ if(USE_PYTHON3)
   	set_target_properties(example PROPERTIES PREFIX "")
   endif()
 else()
-  set_target_properties(example PROPERTIES PREFIX "")
+  if(APPLE)
+  	set_target_properties(example PROPERTIES PREFIX "lib" SUFFIX ".dylib") # don't know what this should be
+  else()
+  	set_target_properties(example PROPERTIES PREFIX "")
+  endif()
 endif()
 
